@@ -4,4 +4,6 @@ rm -vf src/*.o src/*.so inst/lib/*.h \
 
 cd inst/examples/standard && make clean && cd -
 cd inst/examples/mpi && make clean && cd -
+cd inst/examples/qt && make clean && cd -
+cd inst/examples/wt && make clean && cd -
 
