@@ -17,10 +17,6 @@ QtDensity::QtDensity(RInside & R) : m_R(R)
     m_R["bw"] = m_bw;           // pass bandwidth to R, and have R compute a temp.file name
     m_tempfile = QString::fromStdString(Rcpp::as<std::string>(m_R.parseEval("tfile <- tempfile()")));
     m_svgfile = QString::fromStdString(Rcpp::as<std::string>(m_R.parseEval("sfile <- tempfile()")));
-    m_use_svg = m_R.parseEval("require(cairoDevice)");
-    if (!m_use_svg) {
-        std::cerr << "Consider installing the 'cairoDevice' package from CRAN to create SVG graphics." << std::endl;
-    }
     setupDisplay();
 }
 
@@ -68,15 +64,7 @@ void QtDensity::setupDisplay(void)  {
     kernelGroup->addButton(radio5, 4);
     QObject::connect(kernelGroup, SIGNAL(buttonClicked(int)), this, SLOT(getKernel(int)));
 
-    if (m_use_svg) {            // svg case
-        m_svg = new QSvgWidget();
-    } else {                    // png default
-        m_imageLabel = new QLabel;
-        m_imageLabel->setBackgroundRole(QPalette::Base);
-        m_imageLabel->setSizePolicy(QSizePolicy::Ignored, QSizePolicy::Ignored);
-        m_imageLabel->setScaledContents(true);
-        m_image = new QImage(m_tempfile);
-    }
+    m_svg = new QSvgWidget();
     runRandomDataCmd();         // also calls plot()
 
     QGroupBox *estimationBox = new QGroupBox("Density estimation bandwidth (scaled by 100)");
@@ -96,43 +84,26 @@ void QtDensity::setupDisplay(void)  {
     upperlayout->addWidget(estimationBox);
 
     QHBoxLayout *lowerlayout = new QHBoxLayout;
-    if (m_use_svg) {
-        lowerlayout->addWidget(m_svg);
-    } else {
-        lowerlayout->addWidget(m_imageLabel);
-    }
+    lowerlayout->addWidget(m_svg);
 
     QVBoxLayout *outer = new QVBoxLayout;
     outer->addLayout(upperlayout);
     outer->addLayout(lowerlayout);
     window->setLayout(outer);
     window->show();
-    if (!m_use_svg) {
-        window->resize(650, 750);
-    }
 }
 
 void QtDensity::plot(void) {
     const char *kernelstrings[] = { "gaussian", "epanechnikov", "rectangular", "triangular", "cosine" };
     m_R["bw"] = m_bw;
     m_R["kernel"] = kernelstrings[m_kernel]; // that passes the string to R
-    std::string cmd0;
-    if (m_use_svg) {         // select device based on whether cairoDevice is available or not
-        cmd0 = "Cairo(width=6,height=6,pointsize=10,surface='svg',filename=tfile); ";
-    } else {
-        cmd0 = "png(filename=tfile,width=600,height=600);";
-    }
+    std::string cmd0 = "svg(width=6,height=6,pointsize=10,filename=tfile); ";
     std::string cmd1 = "plot(density(y, bw=bw/100, kernel=kernel), xlim=range(y)+c(-2,2), main=\"Kernel: ";
     std::string cmd2 = "\"); points(y, rep(0, length(y)), pch=16, col=rgb(0,0,0,1/4));  dev.off()";
     std::string cmd = cmd0 + cmd1 + kernelstrings[m_kernel] + cmd2; // stick the selected kernel in the middle
     m_R.parseEvalQ(cmd);
-    if (m_use_svg) {
-        filterFile();           // we need to simplify the svg file for display by Qt 
-        m_svg->load(m_svgfile);
-    } else {
-        m_image->load(m_tempfile);
-        m_imageLabel->setPixmap(QPixmap::fromImage(*m_image));
-    }
+    filterFile();           	// we need to simplify the svg file for display by Qt 
+    m_svg->load(m_svgfile);
 }
 
 void QtDensity::getBandwidth(int bw) {
@@ -162,7 +133,6 @@ void QtDensity::runRandomDataCmd(void) {
 void QtDensity::filterFile() {
     // cairoDevice creates richer SVG than Qt can display
     // but per Michaele Lawrence, a simple trick is to s/symbol/g/ which we do here
-
     QFile infile(m_tempfile);
     infile.open(QFile::ReadOnly);
     QFile outfile(m_svgfile);
